[#915] Fixed the save button not showing up

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -617,7 +617,7 @@ label[for=newDeviceGroupName] {
 }
 .middleSection {
     margin: 0 0 20px 0;
-    padding:90px 0 0 0;
+    padding:90px 0 40px 0;
 }
 .leftSidebar {
     -webkit-box-sizing: border-box;
